INTYG-5153: Flyttat material icons font och css till wc, och användning av material icons i wc-headern

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.html
@@ -1,4 +1,4 @@
-<!-- logo is so simple and not used anywhere else, so it's a built-in part of the wc-header directive -->
+<!-- logo is so simple and not used anywhere else, so it's a built-in part of the main wc-header directive -->
 <div class="logo hidden-sm hidden-xs">
   <div class="logo-svg"></div>
 </div>
