--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -42,6 +42,7 @@
   @import 'components/animations/keyframe-animations.scss';
   @import 'components/date/wcDatePickerField/wcDatePickerField.directive.scss';
   @import 'components/headers/wcAppHeader/wcAppHeader.directive.scss';
+  @import 'components/headers/wcAppHeader/wcAppheader.variables.scss';
   @import 'components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUser/wcHeaderUser.directive.scss';
