INTYG-5153: Lagt till användning av wc custom ikonfont

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.html
@@ -13,7 +13,7 @@
 <div class="wc-header-directive-container create-account-section hidden-sm hidden-xs" ng-if="vm.showCreateAccount">
   <div class="vertical-container">
     <div class="text-nowrap">
-      Skapa konto beskrivningstext?
+      Är du privatläkare och vill använda Webcert?
     </div>
     <div class="text-nowrap">
       <a id="createAccountLink" href="" ng-click="onCreateAccountClick()">Skapa konto</a>
