--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
@@ -1,7 +1,6 @@
 <div class="wc-header-directive-container" ng-class="{'expanded' : menu.expanded}">
 
-  <i class="header-icon glyphicon glyphicon-list-alt md-36"></i>
-
+  <i class="header-icon icon-wc-ikon-14 icon-wc-32"></i>
   <div class="vertical-container">
     <!-- first item in vertical container -->
     <div class="single-text-row-container">
