--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUser/wcVardPersonSekretess/wcVardPersonSekretessDialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUser/wcVardPersonSekretess/wcVardPersonSekretessDialog.html
@@ -33,7 +33,7 @@
 
 <div class="modal-footer">
 
-  <button class="btn btn-success" id="wc-vardperson-sekretess-modal-dialog--consent-btn"
+  <button class="btn btn-primary" id="wc-vardperson-sekretess-modal-dialog--consent-btn"
           ng-disabled="!approveChecked" data-ng-click="giveConsent()">
     Till Webcert
   </button>
