--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -674,7 +674,7 @@
     margin: 6px 0 0;
   }
 
-  .qa-panel .btn-info {
+  .qa-panel .btn-secondary {
     padding: 7px 15px;
     min-width: 50px;
   }
