--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.html
@@ -1,5 +1,3 @@
-<div class="uv-alert-value-template" ng-if="showMessage()">
-  <div class="alert alert-{{config.alertLevel}}">
-    <span ng-attr-id="{{'uv-alert-value-' + config.labelKey | uvDomIdFilter}}" dynamic-label key="{{ config.labelKey }}"></span>
-  </div>
+<div class="uv-alert-value-template">
+  <wc-alert-message ng-if="showMessage()" alert-id="{{'uv-alert-value-' + config.labelKey}}" alert-severity="{{config.alertLevel}}" alert-message-id="{{config.labelKey}}"></wc-alert-message>
 </div>
