--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogError.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogError.template.html
@@ -5,5 +5,5 @@
   <div id="dialogErrorText" ng-bind-html="bodyText"></div>
 </div>
 <div class="modal-footer">
-  <button id="dialogErrorOkBtn" type="button" class="btn btn-success" ng-click="$close()">OK</button>
+  <button id="dialogErrorOkBtn" type="button" class="btn btn-primary" ng-click="$close()">OK</button>
 </div>
