--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -40,5 +40,5 @@
   </div>
 </div>
 <div class="modal-footer" style="margin: 0">
-  <button type="button" class="btn btn-success" ng-click="$close()">Stäng</button>
+  <button type="button" class="btn btn-primary" ng-click="$close()">Stäng</button>
 </div>
