INTYG-5153: Enhetstester av nya direktiven

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.html
@@ -6,7 +6,7 @@
 
 <div class="wc-header-directive-container logout-section hidden-sm hidden-xs" ng-if="vm.showLogout">
   <div class="text-nowrap">
-    <a id="logoutLink" href="" ng-click="onLogoutClick()">Logga ut</a>
+    <a href="" id="logoutLink" ng-click="onLogoutClick()">Logga ut</a>
   </div>
 </div>
 
