--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
@@ -251,7 +251,7 @@ label.big-radio-label, label.big-checkbox-label {
     border: 1px solid $wc-color-11;
   }
   .fielderror {
-    input[TYPE='text'], textarea, .ui-select-match {
+    input[TYPE='text']:not(.no-fielderror), textarea, .ui-select-match {
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
       border: 1px solid $wc-color-11;
     }
