--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -579,7 +579,7 @@ label {
         border: 1px solid #ff6600;
     }
     .fielderror {
-        input[TYPE='text'], textarea, .ui-select-match {
+        input[TYPE='text']:not(.no-fielderror), textarea, .ui-select-match {
             box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
             border: 1px solid #ff6600;
         }
