INTYG-5178: Fixat styling i dialog för "Om webcert" så det matchar sidvarianten.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" data-ng-click="close()">×</button>
   <h3 id="omWebcertDialog">Om Webcert</h3>
 </div>
-<div class="modal-body wc-header-about-modal">
+<div class="modal-body wc-header-about-modal about-content">
   <div uib-accordion close-others="true"
        ng-init="open = { om: true, terms: false, support: false, faq: false, kakor: false }">
     <div uib-accordion-group is-open="open.om">
