--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -45,6 +45,7 @@
   @import 'components/headers/wcAppHeader/wcAppHeader.variables.scss';
   @import 'components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.scss';
   @import 'components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss';
+  @import 'components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUser/wcHeaderUser.directive.scss';
   @import 'components/headers/wcAppHeader/wcHeaderUser/wcVardPersonSekretess/wcVardPersonSekretess.directive.scss';
