--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.html
@@ -3,64 +3,63 @@
     <button type="button" class="close" data-ng-click="close()">×</button>
     <h3>Välj vårdenhet eller arbetsplats att logga in på</h3>
   </div>
+
   <div class="modal-body">
+    <div class="alert alert-danger" ng-if="error">Tekniskt fel. Kunde inte byta vårdenhet.</div>
+
     <div ng-repeat="vg in vardgivare | orderBy:'namn'">
-      <div class="row">
-        <div class="col-xs-5 col-xs-offset-1"><strong>{{vg.namn}}</strong></div>
-        <div class="col-xs-3" wc-authority feature="HANTERA_FRAGOR"><strong>Ej hanterade frågor och svar</strong></div>
-        <div class="col-xs-3" wc-authority feature="HANTERA_INTYGSUTKAST"><strong>Ej signerade utkast</strong></div>
+      <div class="row vardgivare">
+        <div class="col-xs-5 vardgivare">{{vg.namn}}</div>
+        <div class="col-xs-4" wc-authority feature="HANTERA_FRAGOR">Ej hanterade frågor och svar</div>
+        <div class="col-xs-3" wc-authority feature="HANTERA_INTYGSUTKAST">Ej signerade utkast</div>
       </div>
       <div ng-repeat="enhet in vg.vardenheter | orderBy:'namn'">
-        <div class="row">
-          <div class="col-xs-1">
-            <button type="button" class="close wc-pull-left wc-wrap-text"
-                    id="expand-enhet-{{enhet.id}}"
-                    style="float:left;"
-                    ng-if="enhet.mottagningar.length > 0"
-                    ng-click="toggle(enhet)">
-              <span class="glyphicon"
-                    ng-class="enhet.showMottagning ? 'glyphicon-minus' : 'glyphicon-plus'">
-              </span>
-            </button>
-          </div>
+        <div class="row vardenhet">
           <div class="col-xs-5">
+            <i class="material-icons md-24" id="expand-enhet-{{enhet.id}}" ng-if="enhet.mottagningar.length > 0"
+               ng-click="toggle(enhet)">{{enhet.showMottagning ? 'expand_less': 'expand_more'}}</i>
+            <i ng-if="enhet.mottagningar.length === 0"></i>
+
             <button type="button" id="select-active-unit-{{enhet.id}}-modal" ng-disabled="isCurrentlySelected(enhet.id)"
-                    class="btn btn-link wc-wrap-text"
-                    data-ng-click="selectVardenhet(enhet)">
-              {{enhet.namn}}
-            </button><span ng-if="isCurrentlySelected(enhet.id)"> (vald enhet)</span>
+                    class="btn btn-link" data-ng-click="selectVardenhet(enhet)">{{enhet.namn}}
+              <span ng-if="isCurrentlySelected(enhet.id)"> (vald enhet)</span></button>
+
           </div>
-          <div class="col-xs-3 enhet-stat"
-               id="fraga-svar-stat-{{enhet.id}}">
+
+          <div class="col-xs-4 enhet-stat" id="fraga-svar-stat-{{enhet.id}}">
             {{ findFragaSvar(vg.id, enhet.id) }} ({{ findAllFragaSvar(vg.id, enhet.id) }})
           </div>
-          <div class="col-xs-3 enhet-stat"
-               id="intyg-stat-{{enhet.id}}">
+
+          <div class="col-xs-3 enhet-stat" id="intyg-stat-{{enhet.id}}">
             {{ findIntyg(vg.id, enhet.id) }} ({{ findAllIntyg(vg.id, enhet.id) }})
           </div>
+
         </div>
-        <div ng-show="enhet.showMottagning">
-          <div class="row" ng-repeat="mottagning in enhet.mottagningar | orderBy:'namn'">
-            <div class="col-xs-5 col-xs-offset-1">
+        <div ng-if="enhet.showMottagning" ng-repeat="mottagning in enhet.mottagningar | orderBy:'namn'">
+          <div class="row mottagning">
+            <div class="col-xs-5">
+
               <button type="button" id="select-active-unit-{{mottagning.id}}-modal"
-                      class="btn btn-link mottagning-button wc-wrap-text"
-                      data-ng-click="selectVardenhet(mottagning)" ng-disabled="isCurrentlySelected(mottagning.id)">
+                      class="btn btn-link" data-ng-click="selectVardenhet(mottagning)"
+                      ng-disabled="isCurrentlySelected(mottagning.id)">
                 {{mottagning.namn}}
-              </button><span ng-if="isCurrentlySelected(mottagning.id)"> (vald enhet)</span>
+                <span ng-if="isCurrentlySelected(mottagning.id)"> (vald enhet)</span>
+              </button>
+
             </div>
-            <div class="col-xs-3 enhet-stat"
-                 id="fraga-svar-stat-{{mottagning.id}}">
+            <div class="col-xs-4 enhet-stat" id="fraga-svar-stat-{{mottagning.id}}">
               {{ findFragaSvar(vg.id, mottagning.id) }}
             </div>
-            <div class="col-xs-3 enhet-stat"
-                 id="intyg-stat-{{mottagning.id}}">
+            <div class="col-xs-3 enhet-stat" id="intyg-stat-{{mottagning.id}}">
               {{ findIntyg(vg.id, mottagning.id) }}
             </div>
           </div>
         </div>
       </div>
-      <hr />
     </div>
-    <div class="alert alert-danger" ng-if="error">Tekniskt fel. Kunde inte byta vårdenhet.</div>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" ng-click="close()">Stäng</button>
   </div>
 </div>
