--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
@@ -4,8 +4,8 @@
   <div class="vertical-container">
     <!-- first item in vertical container -->
     <div class="single-text-row-container">
-      <div class="text-nowrap vg-name">{{user.valdVardgivare.namn}}</div>
-      <div class="truncate-when-needed ve-name" ng-if="showEnhetName()">&nbsp;- {{user.valdVardenhet.namn}}</div>
+      <div class="text-nowrap vg-name">{{getUser().valdVardgivare.namn}}</div>
+      <div class="truncate-when-needed ve-name" ng-if="showEnhetName()">&nbsp;- {{getUser().valdVardenhet.namn}}</div>
     </div>
 
     <!-- second item of vertical container -->
