INTYG-5245: använd wc-alert-message istället för plain bootstrap alerts.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.html
@@ -57,6 +57,7 @@
         </div>
       </div>
     </div>
+    <wc-alert-message alert-severity="danger" ng-if="error">Tekniskt fel. Kunde inte byta vårdenhet.</wc-alert-message>
   </div>
 
   <div class="modal-footer">
