--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
@@ -1,5 +1,5 @@
 <div id="wc-new-person-id-message" class="padding-top-medium" ng-show="show">
-  <div class="alert alert-warning" id="nyttPersonnummer">
+  <wc-alert-message alert-severity="warning" id="nyttPersonnummer">
     <span ng-bind-html="message"></span>
-  </div>
+  </wc-alert-message>
 </div>
