--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -35,14 +35,14 @@ $wc-color-24: #F5F6F7;
 $wc-color-00: #FFFFFF;
 
 $wc-color-01: #F8BFC5;
-$wc-color-04: #99303B;
+$wc-color-04: #9A303B;
 $wc-color-11: #F06F7D;
 
 $wc-color-16: #4C7B67;
-$wc-color-10: #41BFA0;
+$wc-color-10: #37BC9B;
 
-$wc-color-05: #7A5F24;
-$wc-color-12: #E8AD0E;
+$wc-color-05: #765A20;
+$wc-color-12: #F6BB42;
 $wc-color-18: #FFC794;
 $wc-color-02: #ffebba;
 
