--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsErrorBox.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsErrorBox.directive.html
@@ -1,3 +1,3 @@
-  <div class="alert alert-danger" ng-if="messageString">
+<wc-alert-message alert-severity="danger" ng-if="messageString">
     {{messageString}}
-</div>
+</wc-alert-message>
