--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
@@ -1,7 +1,8 @@
-<div ng-attr-id="{{alertId | uvDomIdFilter}}" class="alert alert-{{alertSeverity}}" ng-class="{'alert-warning': alertSeverity === 'sekretess'}">
+<div ng-attr-id="{{alertId | uvDomIdFilter}}" class="text-8-lines alert alert-{{alertSeverity}}" ng-class="{'alert-warning': alertSeverity === 'sekretess'}">
   <i ng-if="alertSeverity === 'info'" class="material-icons">info_outline</i>
   <i ng-if="alertSeverity === 'warning'" class="material-icons">warning</i>
   <i ng-if="alertSeverity === 'sekretess'" class="material-icons">security</i>
   <i ng-if="alertSeverity === 'danger'" class="material-icons">error_outline</i>
-  <span dynamic-label key="{{alertMessageId}}"></span>
+  <span ng-if="alertMessageId" dynamic-label key="{{alertMessageId}}" class="multiline"></span>
+  <ng-transclude></ng-transclude>
 </div>
