--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygHasKompletteringMessage/wcIntygHasKompletteringMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygHasKompletteringMessage/wcIntygHasKompletteringMessage.directive.html
@@ -1,3 +1,3 @@
-<div ng-if="hasKompletteringar()" class="alert alert-warning">
-  <span id="intyg-has-komplettering-message" message key="intyg.status.has.komplettering"></span>
-</div>
+<wc-alert-message id="intyg-has-komplettering-message" ng-if="hasKompletteringar()"
+                  alert-severity="warning"
+                  alert-message-id="intyg.status.has.komplettering"></wc-alert-message>
