--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsInfoBox.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsInfoBox.directive.html
@@ -1,3 +1,3 @@
-<div class="alert alert-warning" ng-if="messageString">
-    <span id="fmb_diagnos_not_in_fmb_alert">{{messageString}}</span>
-  </div>
+<wc-alert-message alert-severity="warning" ng-if="messageString">
+  <span id="fmb_diagnos_not_in_fmb_alert">{{messageString}}</span>
+</wc-alert-message>
