--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss
@@ -2,45 +2,43 @@
 
   //this modal should appear a bit down on the page
   .modal-dialog {
-    margin-top:100px;
-  }
-
-  //..and have more padding
-  .modal-header {
-    border-bottom: none;
-    padding: 25px 50px;
+    margin-top: 100px;
   }
 
   //and should add vertical scrollbar over 500 px height
   .modal-body {
-    padding: 2px 60px 20px 60px;
+    padding: 16px 16px;
     max-height: 500px;
     overflow-y: auto;
   }
 
-  //First child is a VG and should have other styling
-  .nav-pills {
-    &.nav-stacked {
-        li:first-child > a {
-          color: $wc-color-08;
-          background: $wc-color-00 !important;
+  .vardgivare {
+    @extend %wc-typo-05;
 
-        }
-      }
+    margin: 8px 0 16px 0;
+
+    .vardgivare__title {
+      background-color: $wc-color-20;
+      color: $wc-color-09;
+      padding: 7px;
     }
 
-  .toggle-icon {
-    color: $wc-color-22;
-    cursor: pointer;
-    padding-right:8px;
-  }
-  //enhet should be indented
-  .enhet {
-    padding-left: 50px;
+    .vardenhet {
+      @extend %wc-typo-06;
+      color: $wc-color-08;
+      padding-left: 70px;
+    }
+
   }
 
-  .glyphicon {
-    top: 2px;
+  .btn-link {
+    text-decoration: underline;
+    padding-left: 0;
+    font-weight: inherit;
+  }
+
+  .material-icons {
+    cursor: pointer;
   }
 
 }
