INTYG-5153: Använder %wc-typo placeholders i scss för typografi

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.scss
@@ -24,7 +24,14 @@ wc-header-unit {
   color: $wc-color-20;
 
   .vg-name {
-    font-weight: bold;
+    @extend %wc-typo-06;
+  }
+  .ve-name {
+    @extend %wc-typo-07;
+  }
+  .status-row {
+    @extend %wc-typo-07;
+    color: $wc-color-03;
   }
 
 }
