--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcAppHeader.directive.scss
@@ -86,10 +86,6 @@ wc-app-header {
         min-width: 1px;
       }
 
-      .status-row {
-        color: $wc-color-03;
-      }
-
     }
 
     a {
@@ -125,6 +121,7 @@ wc-app-header {
 
 
     > li > a {
+      @extend %wc-typo-08;
       color: $wc-color-20;
       text-decoration: underline;
       &:focus, &:hover {
