--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
@@ -41,6 +41,10 @@ wc-header-help {
     }
 
     &.create-account-section {
+      @extend %wc-typo-07;
+      a {
+        @extend %wc-typo-06;
+      }
       flex: 1 5;
       justify-content: flex-end;
       .vertical-container {
