--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fonts.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fonts.scss
@@ -63,6 +63,11 @@ Color and background should be specified at the extension point, eg:
   @include font-variant(14px, 400);
 }
 
+%wc-typo-08 {
+  @include font-variant(14px, 400);
+  //specify underline here? seems to always be used in link context, so we get underline from that anyway..
+}
+
 
 
 
